--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(libmdcpp_SRSC markdown.cpp markdown_tokens.cpp)
+set(libmdcpp_SRSC markdown.cpp markdown_tokens.cpp libmdcpp.cpp)
 
 add_library(mdcpp SHARED ${libmdcpp_SRSC})
 
@@ -8,4 +8,4 @@ set_target_properties(mdcpp PROPERTIES VERSION 1.0 SOVERSION 1)
 
 install(TARGETS mdcpp LIBRARY DESTINATION lib)
 
-install(FILES markdown.h DESTINATION include)
+install(FILES libmdcpp.h DESTINATION include)
