respect LIB_INSTALL_DIR

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,6 +6,6 @@ target_link_libraries(mdcpp ${Boost_LIBRARIES})
 
 set_target_properties(mdcpp PROPERTIES VERSION 1.0 SOVERSION 1)
 
-install(TARGETS mdcpp LIBRARY DESTINATION lib)
+install(TARGETS mdcpp LIBRARY DESTINATION ${LIB_INSTALL_DIR})
 
 install(FILES libmdcpp.h DESTINATION include)
