--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ project(libmdcpp)
 
 set (CMAKE_CXX_FLAGS "-std=c++11")
 
+if (NOT LIB_INSTALL_DIR)
+    set (LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/lib")
+endif (NOT LIB_INSTALL_DIR)
+
 # set(Boost_USE_STATIC_LIBS ON)
 find_package(Boost
     COMPONENTS regex
