fix build on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,19 @@ cmake_minimum_required(VERSION 2.8)
 
 project(libmdcpp)
 
-set (CMAKE_CXX_FLAGS "-std=c++11")
+if (WIN32)
+    set (CMAKE_CXX_FLAGS "/EHsc")
+    set(Boost_USE_STATIC_LIBS ON)
+    #set(BOOST_ROOT "C:\local\boost_1_60_0")
+    #set(BOOST_LIBRARYDIR "C:\local\boost_1_60_0\lib64-msvc-14.0")
+else(WIN32)
+    set (CMAKE_CXX_FLAGS "-std=c++11")
+endif(WIN32)
 
 if (NOT LIB_INSTALL_DIR)
     set (LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/lib")
 endif (NOT LIB_INSTALL_DIR)
 
-# set(Boost_USE_STATIC_LIBS ON)
 find_package(Boost
     COMPONENTS regex
 	REQUIRED)
